--- a/index.html
+++ b/index.html
@@ -25,9 +25,10 @@
     that toi da rat co gang to devlopment 
 </h2>
 <p>
-
-    toi thuc su ngu ngoc protect who not successs...
-
+    that ra toi dang co van de voi bajn dao 
+</p>
+<p>
+    va deu datj truoc hon nua do chinh la ban la ai? 
 </p>
 </body>
 </html>
