--- a/index.html
+++ b/index.html
@@ -7,10 +7,9 @@
 </head>
 <body>
     <h1>toi ten nguyen hoang laun</h1>
-    <h1>toi ten nguyen hoang laun</h1>
-    <h1>toi ten nguyen hoang laun</h1>
-    <h1>toi ten nguyen hoang laun</h1>
-    <h1>toi ten nguyen hoang laun</h1>
-    <h1>toi ten nguyen hoang laun</h1>
+    <p>
+        toi ten thiet la toi ten thietn ly, toi co lo giut chong ba kia!
+    </p>
+
 </body>
 </html>
