--- a/index.html
+++ b/index.html
@@ -7,10 +7,8 @@
 </head>
 <body>
     <h1>toi ten nguyen hoang laun</h1>
-    <h1>toi ten nguyen hoang laun</h1>
-    <h1>toi ten nguyen hoang laun</h1>
-    <h1>toi ten nguyen hoang laun</h1>
-    <h1>toi ten nguyen hoang laun</h1>
-    <h1>toi ten nguyen hoang laun</h1>
+    <a>
+        toi la nguyen haong luan
+    </a>
 </body>
 </html>
