--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
         sua doi duoi local
     </h2>
     <p>
-        cap nhat tren nhanh main la o phia tren github
+        cap nhat tren nhanh main la o phia tren github lan thu 2 la rat quqn trong!
     </p>
 </body>
 </html>
